[project]
name = "clint"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yong-Jer Chuang", email = "jerjer920813@gmail.com" }
]
dependencies = [
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clint"]
